<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Maze</string>

    <string name="reset">Generate</string>
    <string name="level">Level</string>
    <string name="solution">Solution</string>
    <string name="cancel">Cancel</string>
    <string name="new_game">New game</string>
    <string name="victory_time">Congratulations! You solved the maze in %1$s</string>
    <string name="grid_size">Grid\'s size: %1$s x %2$s</string>
    <string name="grid_size_simple">Grid\'s size</string>
    <string name="filled_squares">Filled square(s): %1$d</string>
    <string name="random_game">Random game %1$d</string>
    <string name="congratulations">Congratulations !!!</string>
    <string name="leave">Leave</string>
    <string name="leave_question">Do you want to end this game?</string>
    <string name="loading">Loading…</string>
    <string name="type_number">Enter a number between %1$d and %2$d. The grid\'s size will be N x N.</string>
    <string name="load">Load</string>
    <string name="digits_only">Only digits are allowed for typing.</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings_color">Colors\' settings</string>
    <string name="options_color_hint">Choose a color</string>
    <string name="options_color_title">Color</string>
    <string name="options_solver_title">Solving algorithm</string>
    <string name="options_solver_hint">Choose the solver</string>

    <!-- Settings -->
    <string name="appearance_settings">Appearance</string>
    <string name="maze_color">Maze Color</string>
    <string name="path_color" translatable="false">Path Color</string>
    <string name="maze_color_summary">Select the color for the maze</string>

    <string name="solver_settings">Solver Settings</string>
    <string name="solver_algorithm">Solving Algorithm</string>
    <string name="solver_algorithm_summary">Choose the algorithm to solve the maze</string>
    <string name="solving_algorithm" translatable="false">solving_algorithm</string>

    <string name="shadow_on_path_settings">Shadow</string>
    <string name="shadow_on_path_summary">Allow shadow on path</string>
    <string name="shadow_on_path" translatable="false">shadow_on_path</string>

    <!-- Solver Algorithm Options -->
    <string-array name="solver_algorithms">
        <item>Depth First Search</item>
        <item>Breadth First Search</item>
        <item>A*</item>
    </string-array>

    <string-array name="solver_algorithms_values" translatable="false">
        <item>dfs</item>
        <item>bfs</item>
        <item>a_star</item>
    </string-array>

    <!-- New Solver Settings -->
    <string name="enable_solver" translatable="false">enable_solver</string>
    <string name="enable_solver_title">Enable Solution Button</string>
    <string name="enable_solver_summary">Show or hide the solution button</string>
    <string name="solver_visualization" translatable="false">solver_visualization</string>
    <string name="solver_visualization_title">Enable Solver Visualization</string>
    <string name="solver_visualization_summary">Show the solving process step by step</string>
    <string name="solver_delay" translatable="false">solver_delay</string>
    <string name="solver_delay_title">Visualization Speed</string>
    <string name="solver_delay_summary">Adjust the delay between solver steps (in milliseconds)</string>
</resources>