<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/solver_settings"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:key="enable_solver"
            android:title="@string/enable_solver_title"
            android:summary="@string/enable_solver_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:key="solver_algorithm"
            android:title="@string/solver_algorithm"
            android:summary="@string/solver_algorithm_summary"
            android:entries="@array/solver_algorithms"
            android:entryValues="@array/solver_algorithms_values"
            android:defaultValue="dfs"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:key="solver_visualization"
            android:title="@string/solver_visualization_title"
            android:summary="@string/solver_visualization_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />

        <SeekBarPreference
            android:key="solver_delay"
            android:title="@string/solver_delay_title"
            android:summary="@string/solver_delay_summary"
            android:defaultValue="@integer/solver_delay_default_value"
            android:max="@integer/solver_delay_max_value"
            android:min="@integer/solver_delay_min_value"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/appearance_settings"
        app:iconSpaceReserved="false">

        <maze.labyrinth.settings.ColorPreference
            android:key="maze_color"
            android:title="@string/maze_color"
            android:summary="@string/maze_color_summary"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:key="shadow_on_path"
            android:title="@string/shadow_on_path_settings"
            android:summary="@string/shadow_on_path_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>